# agent_service

./: .env.example  .gitignore  README.md  __init__.py  main.py  note.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  test_app.py  test_post_endpoints.py  test_post_endpoints_simple.py  test_server.py
app/api/v1/: __init__.py  agent.py  retrieval.py
app/services/: __init__.py  retrieval_service.py
app/utils/: config.py
src/app/api/v1/: retrieval.py
src/app/models/: retrieval.py
src/app/schemas/: __init__.py  agent.py  retrieval.py
src/app/services/: retrieval_service.py
